--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.68.0",
+    "mongoose": "^8.12.1",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
