--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.3",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "react": "^18",
