--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "next-auth": "^5.0.0-beta.25",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
