--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "resend": "^4.3.0"
+    "resend": "^4.3.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "eslint": "^8",
