--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "next-auth": "^5.0.0-beta.25",
     "pdf-lib": "^1.17.1",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
